--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-media": "^1.10.0",
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
     "semantic-ui-css": "^2.4.1",
